# confer

./: .cirrus.yml  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  cabal.project  cabal.project.freeze  cabal.release.project  cabal.release.project.freeze  cabal.static.project  confer.cabal
.cirrus/: ci.sh
.github/workflows/: ci.yml  install-tools.sh  linting.yml  process-binaries.sh  release.yml
app/: Main.hs
doc/: ARCHITECTURE.md  MANUAL.md  confer_example.lua
rpm/: confer.spec
runtime/lua/: confer.lua
src/Confer/API/: Host.hs  User.hs
src/Confer/CLI/: Errors.hs  UI.hs
src/Confer/CLI/Cmd/: Check.hs  Deploy.hs
src/Confer/Cmd/: Check.hs  Deploy.hs
src/Confer/Config/: ConfigFile.hs  Evaluator.hs  Types.hs
src/Confer/Effect/: Symlink.hs
test/: Main.hs  Utils.hs
test/Confer/: EvaluatorTest.hs
test/Confer/CLI/Cmd/: CheckTest.hs
