cabal-version:   3.6
name:            confer
version:         0.1.0.0
synopsis:        The dotfiles manager
description:
  Confer is a configuration file manager that symlinks your configuration files into their appropriate locations.
  You can put your configuration files in version control and make them easily available to their applications.

license:         BSD-3-Clause
license-file:    LICENSE
author:          Théophile Choutri
maintainer:      theophile@choutri.eu
copyright:       2024 Théophile Choutri
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  doc/*.md
  examples/confer.lua
  README.md

data-files:      runtime/lua/confer.lua
tested-with:     GHC ==9.10.1

flag development
  description: Compile the project for development
  default:     True
  manual:      False

common extensions
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    NoStarIsType
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    RecordWildCards
    StrictData
    TypeFamilies

  default-language:   GHC2021

common ghc-options
  ghc-prof-options: -fprof-auto -fno-prof-count-entries -fprof-auto-calls
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -fhide-source-paths -Wno-unused-do-bind -fshow-hole-constraints
    -Wno-unticked-promoted-constructors

  if flag(development)
    ghc-options: -finfo-table-map -Wno-unused-imports -Wno-unused-packages

common rts-options
  ghc-options: -rtsopts -threaded "-with-rtsopts=-N -T"

library
  import:          extensions
  import:          ghc-options

  -- cabal-fmt: expand src/
  exposed-modules:
    Confer.API.Host
    Confer.API.User
    Confer.CLI.Cmd.Check
    Confer.CLI.Cmd.Deploy
    Confer.CLI.Errors
    Confer.Config.ConfigFile
    Confer.Config.Evaluator
    Confer.Config.Types
    Confer.Effect.Symlink

  other-modules:   Paths_confer
  autogen-modules: Paths_confer
  build-depends:
    , aeson
    , base
    , containers
    , directory
    , effectful
    , effectful-core
    , extra
    , file-embed
    , filepath
    , hostname
    , hslua-aeson
    , hslua-core
    , hslua-marshalling
    , hslua-module-system
    , hslua-packaging
    , selective
    , text
    , text-builder-linear
    , text-display
    , validation-selective
    , vector

  hs-source-dirs:  src

executable confer
  import:          extensions
  import:          ghc-options
  import:          rts-options
  hs-source-dirs:  app
  main-is:         Main.hs
  other-modules:   Paths_confer
  autogen-modules: Paths_confer
  build-depends:
    , base
    , confer
    , containers
    , effectful
    , effectful-core
    , filepath
    , optparse-applicative
    , text

test-suite confer-test
  import:         extensions
  import:         ghc-options
  import:         rts-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  other-modules:
    Confer.CLI.Cmd.CheckTest
    Confer.EvaluatorTest
    Utils

  other-modules:
  build-depends:
    , base
    , confer
    , containers
    , directory
    , effectful
    , effectful-core
    , filepath
    , tasty
    , tasty-coverage
    , tasty-hunit
    , tasty-test-reporter
    , temporary
    , vector
